<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bottom_item_ll"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon1"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon2"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon3"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon4"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon5"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon6"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon7"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/icon8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon8"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon9"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon10"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon11"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon12"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon13"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon14"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/icon15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon15"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon16"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon17"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon18"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon19"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon20"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/icon21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon21"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/icon22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/icon22"
            android:textColor="@color/main_bg"
            android:visibility="gone"/>





        <ImageView
            android:id="@+id/img_title"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/tab_my_img"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:textSize="@dimen/text_size_14"
            android:text="我的"
            android:textColor="@color/main_bg" />
    </LinearLayout>
</LinearLayout>